Add search result UI

--- a/root/UI/css/home.css
+++ b/root/UI/css/home.css
@@ -1,5 +1,5 @@
 .search-div{
-  margin: 2rem auto 2rem;
+  margin: 2rem auto 5rem;
   position:relative;
   width: 40rem;
   /* display: inline-block; */
@@ -7,4 +7,8 @@
 
 .mod-btn{
   width: 8rem;
+}
+
+.search-results{
+  margin: 2rem 2rem 2rem;
 }
